Redux introduced, Google Authentication implemented.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,12 @@
 {
+  "parser": "babel-eslint",
   "extends": "airbnb",
   "plugins": ["jest"],
   "env": {
     "browser": true,
     "jest/globals": true
+  },
+  "rules": {
+    "react/jsx-props-no-spreading": "off"
   }
 }
