--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "enzyme": "^3.11.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-jest": "^24.1.3",
+    "redux-mock-store": "^1.5.4",
     "typescript": "^4.1.2"
   },
   "browserslist": {
@@ -50,10 +51,10 @@
     ],
     "coverageThreshold": {
       "global": {
-        "statements": 90,
+        "statements": 93,
         "branches": 100,
-        "functions": 80,
-        "lines": 90
+        "functions": 87,
+        "lines": 93
       }
     },
     "coverageReporters": [
