--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "format": "eslint --fix --ext js,jsx src"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "date-fns": "^2.16.1",
+    "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
